Archive2/b9/416e15654bfe3a/output
main.cpp:20:27: error: expected expression
    devices[0].getInfo<0>();
                          ^
1 error generated.
